[package]
name = "kbackup-utils"
version = "0.0.1"
edition = "2024"

[dependencies]
jaded = { version = "0.5.0", features = ["derive", "renaming"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.143"
hex = "0.4.3"
clap = { version = "4.5.45", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
num_cpus = "1.17.0"
sha2 = "0.10.9"
anyhow = "1.0.99"
indicatif = "0.18.0"